# ComfyUI-Spellcaster

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  blob_bus.py  install.py  model_repair.py  presence.py  privacy_cleanup.py  private_crypto_nodes.py  private_setup_route.py  private_version_route.py  pyproject.toml  requirements.txt
.githooks/: README.md  pre-commit
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: leak-check.yml  publish-to-comfy-registry.yml
example_workflows/: spellcaster_img2img.json  spellcaster_txt2img.json
nodes/: __init__.py  loader.py  output.py  prompt.py  sampler.py
private_pipeline/: __init__.py  wire_envelope.py
private_privacy/: __init__.py  _chacha20poly1305_pure.py  wire_envelope.py
spellcaster_core/: __init__.py  __main__.py  antenna_registry.py  arch_registry.py  architectures.py  asset_gallery.py  auto_updater.py  calibration.py  cli.py  comfy_ws.py  comfyui_llm.py  composites.py  cross_interface.py  diagnostic.py  dispatch.py  estimate.py  event_bus.py  events.py  faceswap_health.py  feature_capabilities.py  forge.py  guild_llm.py  interface_registry.py  llm_prompt_db.py  lora_calibration_store.py  lora_calibrations_sfw.json  lora_knowledge.py  lora_scorer.py  mailbox.py  memory.py  model_detect.py  model_prompt_profiles.py  model_registry.py  node_factory.py  optimizer.py  pipeline.py  plugin_base.py  plugin_presets.py  preference_calibration.py  preflight.py  (+9 more)
spellcaster_core/archs/: _example.json
web/: spellcaster.js
