[project]
name = "comfyui-spellcaster"
description = "Architecture-aware nodes for AI image generation. Auto-detects model architecture (SD1.5, SDXL, Flux, Klein, Chroma), loads correct CLIP/VAE, enhances prompts via local LLM, and samples with optimal settings."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/laboratoiresonore/ComfyUI-Spellcaster"
Issues = "https://github.com/laboratoiresonore/ComfyUI-Spellcaster/issues"

[tool.comfy]
PublisherId = "laboratoiresonore"
DisplayName = "Spellcaster Nodes"
Icon = ""
